# serializer version: 1
# name: test_readme_features[attribution-no_pypi-coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  ## Project template
  
  This project is generated and maintained with [copier-python][copier-python].
  
  [copier-python]: https://smkent.github.io/copier-python
  
  '''
# ---
# name: test_readme_features[attribution-no_pypi-no_coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  ## Project template
  
  This project is generated and maintained with [copier-python][copier-python].
  
  [copier-python]: https://smkent.github.io/copier-python
  
  '''
# ---
# name: test_readme_features[attribution-pypi-coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  ## Project template
  
  This project is generated and maintained with [copier-python][copier-python].
  
  [copier-python]: https://smkent.github.io/copier-python
  
  '''
# ---
# name: test_readme_features[attribution-pypi-no_coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  ## Project template
  
  This project is generated and maintained with [copier-python][copier-python].
  
  [copier-python]: https://smkent.github.io/copier-python
  
  '''
# ---
# name: test_readme_features[no_attribution-no_pypi-coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_features[no_attribution-no_pypi-no_coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_features[no_attribution-pypi-coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_features[no_attribution-pypi-no_coverage]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_type[application]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_type[library]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[AGPL-3.0-only-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Affero General Public License v3.0 only
  ([`AGPL-3.0-only`](COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[AGPL-3.0-only-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Affero General Public License v3.0 only
  ([`AGPL-3.0-only`](https://github.com/ness/PKFire/blob/main/COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[AGPL-3.0-or-later-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Affero General Public License v3.0 or later
  ([`AGPL-3.0-or-later`](COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[AGPL-3.0-or-later-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Affero General Public License v3.0 or later
  ([`AGPL-3.0-or-later`](https://github.com/ness/PKFire/blob/main/COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[Apache-2.0-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Apache License 2.0
  ([`Apache-2.0`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[Apache-2.0-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Apache License 2.0
  ([`Apache-2.0`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[BSD-3-Clause-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the BSD 3-Clause "New" or "Revised" License
  ([`BSD-3-Clause`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[BSD-3-Clause-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the BSD 3-Clause "New" or "Revised" License
  ([`BSD-3-Clause`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC-BY-4.0-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Creative Commons Attribution 4.0 International
  ([`CC-BY-4.0`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC-BY-4.0-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Creative Commons Attribution 4.0 International
  ([`CC-BY-4.0`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC-BY-SA-4.0-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Creative Commons Attribution Share Alike 4.0 International
  ([`CC-BY-SA-4.0`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC-BY-SA-4.0-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the Creative Commons Attribution Share Alike 4.0 International
  ([`CC-BY-SA-4.0`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC0-1.0-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Written in 1995 by Ness and contributors.
  
  To the extent possible under law, the author(s) have dedicated all copyright
  and related and neighboring rights to this software to the public domain
  worldwide. This software is distributed without any warranty. See the
  Creative Commons Zero v1.0 Universal Public Domain Dedication
  ([`CC0-1.0`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[CC0-1.0-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Written in 1995 by Ness and contributors.
  
  To the extent possible under law, the author(s) have dedicated all copyright
  and related and neighboring rights to this software to the public domain
  worldwide. This software is distributed without any warranty. See the
  Creative Commons Zero v1.0 Universal Public Domain Dedication
  ([`CC0-1.0`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[GPL-3.0-only-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU General Public License v3.0 only
  ([`GPL-3.0-only`](COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[GPL-3.0-only-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU General Public License v3.0 only
  ([`GPL-3.0-only`](https://github.com/ness/PKFire/blob/main/COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[GPL-3.0-or-later-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU General Public License v3.0 or later
  ([`GPL-3.0-or-later`](COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[GPL-3.0-or-later-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU General Public License v3.0 or later
  ([`GPL-3.0-or-later`](https://github.com/ness/PKFire/blob/main/COPYING)).
  
  '''
# ---
# name: test_readme_project_visibility[ISC-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the ISC License
  ([`ISC`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[ISC-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the ISC License
  ([`ISC`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[LGPL-3.0-only-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Lesser General Public License v3.0 only
  ([`LGPL-3.0-only`](COPYING.LESSER)).
  
  '''
# ---
# name: test_readme_project_visibility[LGPL-3.0-only-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING.LESSER)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Lesser General Public License v3.0 only
  ([`LGPL-3.0-only`](https://github.com/ness/PKFire/blob/main/COPYING.LESSER)).
  
  '''
# ---
# name: test_readme_project_visibility[LGPL-3.0-or-later-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Lesser General Public License v3.0 or later
  ([`LGPL-3.0-or-later`](COPYING.LESSER)).
  
  '''
# ---
# name: test_readme_project_visibility[LGPL-3.0-or-later-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/COPYING.LESSER)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the GNU Lesser General Public License v3.0 or later
  ([`LGPL-3.0-or-later`](https://github.com/ness/PKFire/blob/main/COPYING.LESSER)).
  
  '''
# ---
# name: test_readme_project_visibility[MIT-private]
  '''
  # PKFire
  
  Onett Little League
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](LICENSE)).
  
  '''
# ---
# name: test_readme_project_visibility[MIT-public]
  '''
  # PKFire
  
  Onett Little League
  
  [![License](https://img.shields.io/github/license/ness/PKFire)](https://github.com/ness/PKFire/blob/main/LICENSE)
  [![PyPI](https://img.shields.io/pypi/v/PKFire)](https://pypi.org/project/PKFire/)
  [![Python](https://img.shields.io/pypi/pyversions/PKFire)](https://pypi.org/project/PKFire/)
  [![CI](https://github.com/ness/PKFire/actions/workflows/ci.yaml/badge.svg)](https://github.com/ness/PKFire/actions/workflows/ci.yaml)
  [![Coverage](https://codecov.io/gh/ness/PKFire/branch/main/graph/badge.svg)](https://codecov.io/gh/ness/PKFire)
  [![Renovate](https://img.shields.io/badge/renovate-enabled-brightgreen?logo=renovatebot)](https://renovatebot.com)
  [![GitHub stars](https://img.shields.io/github/stars/ness/PKFire?style=social)](https://github.com/ness/PKFire)
  
  ## Installation
  
  ```sh
  pip install PKFire
  ```
  
  ## License
  
  Copyright (C) 1995 Ness and contributors
  
  Licensed under the MIT License
  ([`MIT`](https://github.com/ness/PKFire/blob/main/LICENSE)).
  
  '''
# ---
